--- a/PARKWEBSITE/cart.html
+++ b/PARKWEBSITE/cart.html
@@ -25,8 +25,11 @@
           <!-- 
             Winkelwagen hier
           -->
-          
-          <button>Dit is correct, verder naar betaling</button>
+            <div class="button">
+              <a href="payment.html" class="button-link">
+              Dit is correct, verder naar betaling
+            </a>
+            </div>
         </div>
       </article>
     </div>
