--- a/PARKWEBSITE/cart.html
+++ b/PARKWEBSITE/cart.html
@@ -22,9 +22,44 @@
         <h2>Winkelwagentje</h2>
         <div>
           <span>Dit zijn alle producten die u gaat bestellen. Controleer een laatste keer of alles klopt en ga daarna verder met de grote groene knop.</span>
-          <!-- 
-            Winkelwagen hier
-          -->
+          <!-- Winkelwagen -->
+          <table class="tickets">
+            <thead>
+              <tr>
+                <th>Product</th>
+                <th>Prijs (enkel)</th>
+                <th>Aantal</th>
+                <th>Prijs (totaal)</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>Entreekaartje Kind t/m 3 jaar</td>
+                <td>€ 0</td>
+                <td>1</td>
+                <td>€ 0</td>
+              </tr>
+              <tr>
+                <td>Entreekaartje Regulier</td>
+                <td>€ 24,95</td>
+                <td>2</td>
+                <td>€ 49,90</td>
+              </tr>
+              <tr>
+                <td>Entreekaartje Senior</td>
+                <td>€ 14,95</td>
+                <td>1</td>
+                <td>€ 14,95</td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr class="total">
+                <td colspan="3"> Totaalsom (incl. btw)</td>
+                <td>€ 64,85</td>
+              </tr>
+            </tfoot>
+          </table>
           
           <button>Dit is correct, verder naar betaling</button>
         </div>
