--- a/PARKWEBSITE/cart.html
+++ b/PARKWEBSITE/cart.html
@@ -55,8 +55,13 @@
             </tbody>
             <tfoot>
               <tr class="total">
-                <td colspan="3"> Totaalsom (incl. btw)</td>
-                <td>€ 64,85</td>
+                <td colspan="5" style="text-align:center;">
+                <strong>Totaalsom</strong><br>
+                <span>(incl. btw)</span>
+                </td>
+                <td style="text-align:center;">
+                <strong>€ 64,85</strong>
+                </td>
               </tr>
             </tfoot>
           </table>
